# fhir_on_fire

./: .gitignore  pyproject.toml
fhir_integration/: extract_and_map.py  fhir_map.py  main.py  utils.py
fhir_integration/llm_services/: llm_base.py  llm_multiple.py  llm_service_organization.py  llm_single.py  questions.py
fhir_integration/models/: activeIngredient.py  adjuvantIngredient.py  contraindication.py  interaction.py  medicationKnowledge.py  medicinalProductDefinition.py  organization.py  sideEffect.py  warning.py
fhir_integration/services/: fhir_client.py  llm_service.py  lookUp_service.py  store_service.py  validation_service.py
fhir_integration/utils/: fhir_structure_creator.py
leaflet_as_txt/: 1-19251.txt  1-19430.txt  1-20548.txt  1-23219.txt  1-23451.txt  1-26003.txt  1-26352.txt  1-27482.txt  1-27543.txt  1-31178.txt  2-00143.txt
notebooks/: decode2.ipynb  test_fhir.ipynb  test_hapi_fhir_server.ipynb  test_open_ai.ipynb
resources/: ClinicalUseDefinition_contraindication.fhir.json  ClinicalUseDefinition_contraindication.json  ClinicalUseDefinition_interaction.fhir.json  ClinicalUseDefinition_interaction.json  ClinicalUseDefinition_undesireableEffect.fhir.json  ClinicalUseDefinition_undesireableEffect.json  ClinicalUseDefinition_warnings.fhir.json  ClinicalUseDefinition_warnings.json  MedicationKnowledge.fhir.json  MedicationKnowledge.json  MedicinalProductDefinition.fhir.json  MedicinalProductDefinition.json  Organisation_basg.fhir.json  Organisation_basg.json  medicalKnowledgeWithCodes.fhir.json  test.json
services/: secrets.py
(+17 files in other folders)
