[tool.poetry]
name = "fhir-on-fire"
version = "0.1.0"
description = ""
authors = ["kathi"]
readme = "README.md"

packages = [
    { include = "services"}
]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-secret-manager = "^2.20.0"
jupyterlab = "^4.1.6"
openai = "^1.23.2"
google-api-python-client = "^2.127.0"
fhir-resources = "^7.1.0"
fsh-validator = "^0.3.5"
fhirpy = "^1.4.2"
transformers = "^4.41.0"
tensorflow = "^2.16.1"
tf-keras = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
